--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="openModal" class="modal hide">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Game Over</h2>
+                <span><a href="#close" class="modal-close">X</a></span>
+            </div>
+            <div class="modal-body">
+                <p>You won!</p>
+            </div>
+            <div class="modal-button">
+                <button class="modal-replay">Play Again</button>
+            </div>
+        </div>
+    </div>
     <script src="js/resources.js"></script>
     <script src="js/classes.js"></script>
     <script src="js/app.js"></script>
